--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "matriphe/iso-639",
+    "name": "ianm/iso-639",
     "description": "PHP library to convert ISO-639-1 code to language name.",
     "keywords": ["iso", "iso-639", "639", "lang", "language", "laravel"],
     "type": "library",
     "require-dev": {
-        "phpunit/phpunit": "^4.7"
+        "phpunit/phpunit": "^9.5"
     },
     "license": "MIT",
     "authors": [
@@ -13,10 +13,12 @@
             "email": "halo@matriphe.com"
         }
     ],
-    "require": {},
     "autoload": {
         "psr-4": {
             "Matriphe\\ISO639\\": "src/"
         }
+    },
+    "replace":{
+        "matriphe/iso-639": "*"
     }
 }
