--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: php-actions/composer@2
+      - uses: php-actions/composer@v5
 
       - name: PHPUnit Tests
-        uses: php-actions/phpunit@9
+        uses: php-actions/phpunit@v9
         with:
           bootstrap: vendor/autoload.php
           configuration: phpunit.xml
