--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,10 @@ jobs:
   build-test:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        php: [7.2, 7.3, 7.4, 8.0]
+
     steps:
       - uses: actions/checkout@v2
 
