--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,17 @@ jobs:
 
     strategy:
       matrix:
-        php: [7.2, 7.3, 7.4, 8.0]
+        php-versions: [7.2, 7.3, 7.4, 8.0]
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-versions }}
+          extensions: mbstring, intl
+          coverage: xdebug   
 
       - name: Install Composer dependencies
         run: composer install
